k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grepod
  namespace: default
  labels:
    app.kubernetes.io/name: grepod
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: grepod
